poc-case-bundle/ibm-cfmr/tmp.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2021-04-26T19:59:37Z"
  labels:
    app.kubernetes.io/component: console-ext-service
    app.kubernetes.io/instance: cfmr-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stratos
    app.kubernetes.io/version: 4.4.0
    helm.sh/chart: console-4.4.0
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: oc
    operation: Update
    time: "2021-04-26T19:59:37Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2021-04-26T20:35:29Z"
  name: cfmr-ui
  namespace: cfmr-ui
  resourceVersion: "16539026"
  selfLink: /apis/route.openshift.io/v1/namespaces/cfmr-ui/routes/cfmr-ui
  uid: a1bc5cc9-315a-44e4-a57b-8a227dc5c616
spec:
  host: cfmr-ui.apps.cfmr-4621.purple-mystic-butterfly.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: cfmr-ui-ui-ext
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-04-26T19:59:37Z"
      status: "True"
      type: Admitted
    host: cfmr-ui.apps.cfmr-4621.purple-mystic-butterfly.com
    routerCanonicalHostname: apps.cfmr-4621.purple-mystic-butterfly.com
    routerName: default
    wildcardPolicy: None
  - conditions:
    - lastTransitionTime: "2021-04-26T20:35:29Z"
      status: "True"
      type: Admitted
    host: cfmr-ui.apps.cfmr-4621.purple-mystic-butterfly.com
    routerCanonicalHostname: router.worldtraveler.cfmr.site
    routerName: cfmr-shard
    wildcardPolicy: None
